Fixed buttons scaling issues & project boards apperance unsquished text in mobile, stack each on top

--- a/public/mystyle.css
+++ b/public/mystyle.css
@@ -32,7 +32,7 @@
 /*
 */
 /*Button CSS*/
-.btnp {
+.btn {
     -moz-user-select: none;
     background-image: none;
     border: 1px solid transparent;
